<?xml version="1.0"?>
<package>
  <name>ar_marker_detector</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="todo@tue.nl">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>artoolkit</build_depend>
  <run_depend>artoolkit</run_depend>

  <build_depend>rgbd</build_depend>
  <run_depend>rgbd</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

</package>
